# task-manager

./: CMakeLists.txt  FreeRTOSConfig.h  main.c  stubs.h
app/: CMakeLists.txt
app/include/: led_out.h  serial_in.h
app/src/: led_out.c  serial_in.c
taskMgr/: CMakeLists.txt
taskMgr/include/: health_monitor_task.h  taskMgr.h  task_cfg.h
taskMgr/src/: health_monitor_task.c  taskMgr.c
